fix session closing + add WebTransport tests

--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -19,9 +19,16 @@ unavi-world-host = { path = "../unavi-world-host" }
 unavi-world-server = { path = "../unavi-world-server" }
 
 [dev-dependencies]
+base64.workspace = true
+capnp-rpc.workspace = true
+capnp.workspace = true
 port_scanner = "0.1.5"
 reqwest.workspace = true
 serde_json.workspace = true
-tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
+tracing-test = "0.2.4"
+unavi-networking = { path = "../unavi-networking" }
 wired-social = { path = "../wired-social" }
+wired-world = { path = "../wired-world" }
 wtransport = { workspace = true, features = ["dangerous-configuration"] }
+xwt-futures-io = { path = "../xwt-futures-io" }
+xwt-wtransport.workspace = true
