--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ semver = "1.0.22"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 surrealdb = { version = "=1.4.2", default-features = false }
+thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
 wasm-bindgen = "=0.2.91"
