--- a/crates/unavi-networking/Cargo.toml
+++ b/crates/unavi-networking/Cargo.toml
@@ -14,6 +14,7 @@ anyhow.workspace = true
 bevy.workspace = true
 capnp-rpc.workspace = true
 capnp.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
 unavi-world = { path = "../unavi-world" }
 wired-world = { path = "../wired-world" }
