add tickrate request

--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -13,7 +13,7 @@ self_update = ["dep:self_update"]
 workspace = true
 
 [dependencies]
-bevy.workspace = true
+bevy = { workspace = true, features = ["wayland"] }
 bevy_xpbd_3d.workspace = true
 clap.workspace = true
 dwn.workspace = true
