--- a/crates/unavi-world/Cargo.toml
+++ b/crates/unavi-world/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 base64.workspace = true
 bevy.workspace = true
 bevy_async_task.workspace = true
-bevy_vrm = "0.0.10"
+bevy_vrm.workspace = true
 bevy_xpbd_3d.workspace = true
 dwn.workspace = true
 serde_json.workspace = true
