--- a/crates/unavi-world/Cargo.toml
+++ b/crates/unavi-world/Cargo.toml
@@ -12,10 +12,11 @@ workspace = true
 base64.workspace = true
 bevy.workspace = true
 bevy_async_task.workspace = true
+bevy_atmosphere = "0.9.1"
 bevy_vrm.workspace = true
 bevy_xpbd_3d.workspace = true
 dwn.workspace = true
 serde_json.workspace = true
-thiserror = "1.0.59"
+thiserror.workspace = true
 unavi-dwn = { path = "../unavi-dwn" }
 wired-social = { path = "../wired-social" }
