--- a/crates/unavi-avatar/Cargo.toml
+++ b/crates/unavi-avatar/Cargo.toml
@@ -11,3 +11,6 @@ workspace = true
 [dependencies]
 bevy.workspace = true
 bevy_vrm.workspace = true
+
+[dev-dependencies]
+bevy_panorbit_camera = "0.18.2"
