--- a/crates/unavi-scripting/Cargo.toml
+++ b/crates/unavi-scripting/Cargo.toml
@@ -11,6 +11,7 @@ workspace = true
 [dependencies]
 anyhow.workspace = true
 bevy.workspace = true
+crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 wasm_component_layer = "0.1.16"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
