--- a/wasm/unavi-system/Cargo.toml
+++ b/wasm/unavi-system/Cargo.toml
@@ -18,5 +18,7 @@ wit-bindgen-rt.workspace = true
 package = "unavi:system"
 
 [package.metadata.component.target.dependencies]
+"wired:gltf" = { path = "../../wired-protocol/spatial/wit/wired-gltf" }
 "wired:log" = { path = "../../wired-protocol/spatial/wit/wired-log" }
+"wired:math" = { path = "../../wired-protocol/spatial/wit/wired-math" }
 "wired:script" = { path = "../../wired-protocol/spatial/wit/wired-script" }
