--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ surrealdb = { version = "1.4.2", default-features = false }
 thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
+tracing-test = "0.2.4"
 wasm-bindgen = "=0.2.92"
 wasm-bindgen-futures = "0.4.41"
 web-sys = "0.3.68"
