--- a/crates/unavi-scripting/Cargo.toml
+++ b/crates/unavi-scripting/Cargo.toml
@@ -20,3 +20,8 @@ wasm_runtime_layer = { version = "0.3.0", features = ["tracing", "backend_web"] 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 wasm_runtime_layer = { version = "0.3.0", features = ["tracing", "backend_wasmtime"] }
 wasmtime = { version = "18.0.0", features = ["component-model"] }
+
+[dev-dependencies]
+tokio.workspace = true
+tracing-test = { workspace = true, features = ["no-env-filter"] }
+tracing.workspace = true
