--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -25,7 +25,7 @@ capnp.workspace = true
 port_scanner = "0.1.5"
 reqwest.workspace = true
 serde_json.workspace = true
-tracing-test = "0.2.4"
+tracing-test.workspace = true
 unavi-networking = { path = "../unavi-networking" }
 wired-social = { path = "../wired-social" }
 wired-world = { path = "../wired-world" }
