--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
           message: "chore: generate README"
           default_author: github_actions
 
+      - run: nix run .?submodules=1#generate-assets
       - run: nix develop -c cargo doc --workspace --all-features --no-deps
       - run: nix develop -c cargo test --workspace --all-features --all-targets
       - run: nix develop -c cargo test --workspace --all-features --doc
